<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.github.sumeetchhetri.gatf</groupId>
		<artifactId>gatf-parent</artifactId>
		<version>1.1.3</version>
	</parent>
	
	<artifactId>gatf-alldep-jar</artifactId>
	<packaging>jar</packaging>
	<name>gatf-alldep-jar</name>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>java.xml</arg>
						<arg>--add-modules</arg>
						<arg>jdk.compiler</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<!--  plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-assembly-plugin</artifactId>
	            <executions>
	                <execution>
	                    <id>gatf-resources</id>
	                    <phase>package</phase>
	                    <goals>
	                        <goal>single</goal>
	                    </goals>
	                    <configuration>
	                    	<finalName>gatf-resources</finalName>
	                    	<appendAssemblyId>false</appendAssemblyId>
	                        <descriptor>gatf-resources.xml</descriptor>
	                        <outputDirectory>${project.build.directory}/classes</outputDirectory>
	                    </configuration>
	                </execution>
	                <execution>
	                    <id>gatf-config-tool</id>
	                    <phase>package</phase>
	                    <goals>
	                        <goal>single</goal>
	                    </goals>
	                    <configuration>
	                    	<finalName>gatf-config-tool</finalName>
	                    	<appendAssemblyId>false</appendAssemblyId>
	                        <descriptor>gatf-config-tool.xml</descriptor>
	                        <outputDirectory>${project.build.directory}/classes</outputDirectory>
	                    </configuration>
	                </execution>
	            </executions>
	        </plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<filters>
						        <filter>
						            <artifact>*:*</artifact>
						            <excludes>
						                <exclude>META-INF/*.SF</exclude>
						                <exclude>META-INF/*.DSA</exclude>
						                <exclude>META-INF/*.RSA</exclude>
						            </excludes>
						        </filter>
						    </filters>
							<shadedArtifactAttached>false</shadedArtifactAttached>
            				<createDependencyReducedPom>true</createDependencyReducedPom>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>com.gatf.generator.core.GatfTestGeneratorUtil</mainClass>
								</transformer>
								<!-- https://github.com/SeleniumHQ/selenium/issues/10132 -->
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.7</version>
			</dependency>
			<dependency>
				<groupId>xml-apis</groupId>
				<artifactId>xml-apis</artifactId>
				<version>1.4.01</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
